# DEDS_Portfolio_Week3

./: Practicum_3.1_Opdrachten.html  Practicum_3.1_Opdrachten.ipynb  Practicum_3.2_Opdrachten.html  Practicum_3.2_Opdrachten.ipynb  README.md  pyproject.toml
