[tool.poetry]
name = "pjotr-senne-portfolio-week3"
version = "1.0"
description = "Onze DEDS Portfolio Opdracht"
authors = ["Peter-The-Great <PjotrW15@Gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
notebook = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
